<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.quizapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/Questions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question1" />

        <EditText
            android:id="@+id/question1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint"
            android:inputType="text"
            android:textColorHint="#8bc34a" />

        <TextView
            style="@style/Questions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/question2" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <RadioButton
                android:id="@+id/question2_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="yes" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="no" />
        </RadioGroup>

        <TextView
            style="@style/Questions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question3" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <RadioButton
                android:id="@+id/question3_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="yes" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="no" />
        </RadioGroup>

        <TextView
            style="@style/Questions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question4" />

        <CheckBox
            android:id="@+id/question4_check_box1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="7dp"
            android:paddingLeft="3dp"
            android:text="Nougat"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/question4_check_box2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="12dp"
            android:paddingLeft="3dp"
            android:text="KitKat"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/question4_check_box3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="12dp"
            android:paddingLeft="3dp"
            android:text="SwampMallow"
            android:textSize="16sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onCheckButtonClicked"
            android:text="@string/check" />

    </LinearLayout>
</ScrollView>

